--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
     <version>2.0.1.Final</version>
 </dependency>
 
+<dependency>
+	<groupId>software.amazon.awssdk</groupId>
+	<artifactId>aws-sdk-java</artifactId>
+	<version>2.15.5</version>
+  </dependency>
+
 	</dependencies>
 
 	<build>
