--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #create-drop = creates database and drops it when "session factory is closed". This is used for H2s 
 #drop = drops
 #validate = does nothing to schemas
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url = jdbc:mysql://demo-database.cqnp4ywknlze.us-west-1.rds.amazonaws.com:3306/demodatabase2
 spring.datasource.username = admin
 spring.datasource.password = password
